[package]
name = "encrypt_m7small"
version = "0.1.0"
authors = ["Ivy Seo <ivy.rice.seo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.5"
libsodium-sys = "0.2.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
libc = "0.2.71"
